deploy and changed info

--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div id="about">
         <h2>About</h2>
-        <p>I'm ....</p>
+        <p>Full stack developer based out of Shizuoka but originally from England. I’m passionate about making web apps in my free time. Looking to work with a company that will allow me to further my programming skills. I also speak Japanese. </p>
       </div>
     </div>
   </div>
