--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -1,5 +1,8 @@
 .avatar {
-  width: 40px;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  object-position: 50% 0%;
   border-radius: 50%;
 }
 .avatar-large {
