background and sizing changes

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,14 @@
-<div class="container ">
+<div class="background">
   <!-- Banner Section -->
   <%= partial 'partials/banner' %>
-  <!-- About Section -->
-  <%= partial 'partials/about' %>
-  <!-- Projects Section -->
-  <%= partial 'partials/projects' %>
-  <!-- Social Links Section -->
-  <%= partial 'partials/social' %>
+</div>
+<div class="grey">
+  <div class="container">
+    <!-- About Section -->
+    <%= partial 'partials/about' %>
+    <!-- Projects Section -->
+    <%= partial 'partials/projects' %>
+    <!-- Social Links Section -->
+    <%= partial 'partials/social' %>
+  </div>
 </div>
