--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,4 +1,4 @@
-<div class="row my-5">
+<div class="row mb-5 pt-5">
   <div class="col-6">
     <div class="container">
       <div id="about">
@@ -11,8 +11,7 @@
     <div class="container">
       <div id="about">
         <div>
-          <h1>Key Skills</h1>
-          <%# <a href="https://reactjs.org/" target="_blank"><img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/react-original-wordmark.svg" alt="React" height="50" /></a> %>
+          <h2>Key Skills</h2>
           <a href="https://rubyonrails.org/" target="_blank"><img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/rails-original-wordmark.svg" alt="Ruby on Rails" height="50" /></a>
           <a href="https://www.javascript.com/" target="_blank"><img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/javascript-original.svg" alt="JavaScript" height="50" /></a>
           <a href="https://getbootstrap.com/docs/3.4/javascript/" target="_blank"><img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/bootstrap-plain.svg" alt="Bootstrap" height="50" /></a>
