--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,7 +1,7 @@
 <div class="row justify-content-center banner vh-100">
-  <div class="col-6 d-flex flex-column justify-content-center align-items-left h-100 ps-5">
-    <h1 class="title-main">Thomas Price</h1>
-    <p>Full Stack developer</p>
+  <div class="col-6 d-flex flex-column justify-content-center align-items-center h-100">
+    <h1 class="title-main text-white" style="font-size: 56px;">Thomas Price</h1>
+    <p class="text-white">Full Stack developer</p>
   </div>
   <div class="col-6 d-flex flex-column justify-content-center align-items-center">
     <%# <%= image_tag 'https://teamsinta.com/Website/sinta/images/headre.svg', alt: "profile photo", class: 'w-75' %>
