--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,5 +1,5 @@
 <div class="row mb-5 pt-5">
-  <div class="col-6">
+  <div class="col-md-6">
     <div class="container">
       <div id="about">
         <h2>About</h2>
@@ -7,7 +7,7 @@
       </div>
     </div>
   </div>
-  <div class="col-6">
+  <div class="col-md-6">
     <div class="container">
       <div id="about">
         <div>
