fixed an on margin on mobile and the cards on mobile

--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,5 +1,5 @@
-<div class="row justify-content-center vh-100">
-  <div class="col-md-6 d-flex flex-column justify-content-center align-items-center ">
+<div class="row justify-content-center vh-100 mx-0">
+  <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
     <h1 class="title-main text-white" style="font-size: 56px;">Thomas Price</h1>
     <p class="text-white">Full Stack developer</p>
   </div>
